--- a/hadron-core/ambiata-hadron-core.lock-7.10.2
+++ b/hadron-core/ambiata-hadron-core.lock-7.10.2
@@ -1,14 +1,15 @@
 # mafia-lock-file-version: 0
 ansi-terminal == 0.6.2.3
 ansi-wl-pprint == 0.6.7.3
-attoparsec == 0.12.1.6
+attoparsec == 0.13.1.0
 base-orphans == 0.5.4
 bifunctors == 5.3
 comonad == 5
 contravariant == 1.4
 deepseq-generics == 0.2.0.0
 distributive == 0.5.0.2
-exceptions == 0.8.2.1
+exceptions == 0.8.3
+fail == 4.9.0.0
 hashable == 1.2.4.0
 ieee754 == 0.7.8
 mtl == 2.2.1
@@ -18,14 +19,14 @@ optparse-applicative == 0.12.1.0
 primitive == 0.6.1.0
 QuickCheck == 2.8.2
 quickcheck-instances == 0.3.12
-quickcheck-text == 0.1.1.0
+quickcheck-text == 0.1.2.1
 random == 1.1
-scientific == 0.3.4.8
+scientific == 0.3.4.9
 semigroups == 0.18.2
 semigroups -bytestring-builder
 StateVar == 1.1.0.4
 stm == 2.4.4.1
-tagged == 0.8.4
+tagged == 0.8.5
 text == 1.2.2.1
 tf-random == 0.5
 transformers-compat == 0.5.1.4
