--- a/hadron-core/test/ambiata-hadron-core-test.lock-7.10.2
+++ b/hadron-core/test/ambiata-hadron-core-test.lock-7.10.2
@@ -9,6 +9,7 @@ contravariant == 1.4
 deepseq-generics == 0.2.0.0
 distributive == 0.5.0.2
 exceptions == 0.8.3
+fail == 4.9.0.0
 hashable == 1.2.4.0
 ieee754 == 0.7.8
 mtl == 2.2.1
@@ -22,6 +23,7 @@ quickcheck-text == 0.1.2.1
 random == 1.1
 scientific == 0.3.4.9
 semigroups == 0.18.2
+semigroups -bytestring-builder
 StateVar == 1.1.0.4
 stm == 2.4.4.1
 tagged == 0.8.5
